--- a/tac25027/banners/320x50/assets/css/style.css
+++ b/tac25027/banners/320x50/assets/css/style.css
@@ -138,7 +138,7 @@
 
 .wave {
   position: absolute;
-  z-index: 5;
+  z-index: 2;
   left: 50px;
   top: 0px;
   width: auto;
